# fastdds_sample

./: .gitignore  CMakeLists.txt  README.md
dds/include/fastrtps/: config.h
dds/lib/arm/: libfastcdr.so.1.1.1  libfastrtps.so.2.8
dds/lib/x64/: libfastcdr.so.1.1.1
src/: DDSConfig.cpp  DDSConfig.h  DDSConfig.hpp  base64.hpp  log_define.h  logic.hpp  main.cpp
src/json_msg/: msgHead.h
src/json_msg/parse/: CommonMsg.h  JAddSceneDescInfo.h  JCreateMap.h  JGetCurMapId.h  JGetGridData.h  JGetMapList.h  JGetRobotState.h  JGetSceneDescInfo.h  JReportBaseInfo.h  JReportIp.h  JReportMapIncrement.h  JReportPose.h  JReportRoboticState.h  JReportTaskState.h  JSearchObj.h  JSearchPeople.h  JSearchPeopleUpdate.h  JSerialData.h  JSetChangeScene.h  JSetManual.h  JSubCmdVel.h  JTaskControl.h  JTaskFollow.h  JTaskP2P.h  JTaskPatrol.h  JTaskRecharge.h  JTaskSemanticMove.h
src/report/: Report.cxx  Report.h  Report.idl  ReportPubSubTypes.cxx  ReportPubSubTypes.h  ReportPublisher.cxx  ReportPublisher.h  ReportSubscriber.cxx  ReportSubscriber.h
src/request/: Request.cxx  Request.h  Request.idl  RequestPubSubTypes.cxx  RequestPubSubTypes.h  RequestPublisher.cxx  RequestPublisher.h  RequestSubscriber.cxx  RequestSubscriber.h
src/response/: Response.cxx  Response.h  Response.idl  ResponsePubSubTypes.cxx  ResponsePubSubTypes.h  ResponsePublisher.cxx  ResponsePublisher.h  ResponseSubscriber.cxx  ResponseSubscriber.h
src/wrapper/: ClientBase.cpp  ClientBase.h  ClientWrapper.cpp  ClientWrapper.h  PublisherWrapper.cpp  PublisherWrapper.h  ServiceBase.cpp  ServiceBase.h  ServiceWrapper.cpp  ServiceWrapper.h  SubscriberWrapper.cpp  SubscriberWrapper.h
